--- a/css/common.css
+++ b/css/common.css
@@ -40,3 +40,17 @@ button {
 .gallery li {
   list-style: none;
 }
+
+/* --- task-10 --- */
+
+#boxes {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+#boxes h1 {
+  margin: 0;
+  font-size: 24px;
+}
